--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <head>
+    
     <style>
-        * {
+        @import url('https://fonts.googleapis.com/css2?family=Rubik+Pixels&display=swap');   
+    * {
+            font-family: 'Rubik Pixels', cursive;
             box-sizing: border-box;
         }
 
@@ -20,37 +23,41 @@
 
                 ">
             <!-- player health-->
-            <div style="position: relative;height: 30px; width: 100%; display: flex; justify-content: flex-end;">
+            <div style=" position: relative;height: 30px; width: 100%; display: flex; justify-content: flex-end; border: 4px solid rgb(242, 242, 242); border-radius: 5px; border-right: 0px;"> 
                 <div
-                    style="background-color: yellow; height: 30px;width: 100%;">    
+                    style="background-color: rgba(255, 0, 0, 0); height: 30px;width: 100%;">    
                 </div>
                 <div
                     id="playerHealth"
-                    style="position:absolute; background: blue; top: 0; right: 0; bottom: 0; width: 100%;">
+                    style="position:absolute; background: rgba(63, 63, 155, 0.829); top: 0; right: 0; bottom: 0; width: 100%;">
                 </div>
             </div>
             <!--TIMER-->
             <div
                 id="timer"
                  style="
-                        background-color: red;
+                        background-color: rgba(0, 0, 0, 0.548);
                         width: 100px;
-                        height: 100px;
+                        height: 50px;
                         flex-shrink: 0;
                         display: flex;
                         align-items: center;
                         justify-content: center;
+                        color: white;
+                        
+                        border: 4px solid rgb(242, 242, 242); border-left: 0px;
+                        border-right: 0px;border-radius: 310px;
                         ">
                         10
                     </div>
             <!-- enemy health-->
-        <div style="position: relative;height: 30px; width: 100%;">
+        <div style="position: relative;height: 30px; width: 100%;border: 4px solid rgb(242, 242, 242); border-radius: 5px;border-left: 0px;">
             <div
-                style="background-color: yellow; height: 30px;">    
+                style="background-color: rgba(93, 57, 57, 0); height: 30px;">    
             </div>
             <div
                 id="enemyHealth"
-                style="position:absolute; background: blue; top: 0; right: 0; bottom: 0; left: 0;">
+                style="position:absolute; background: rgba(255, 0, 0, 0.534); top: 0; right: 0; bottom: 0; left: 0;">
             </div>
         </div>
         <div></div>
@@ -58,6 +65,7 @@
         <div id='displayText' style="position: absolute; color: white; align-items: center; justify-content:center; top: 0; right: 0; bottom: 0; left: 0; ; display: none">Tie</div>
         <canvas></canvas>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js" integrity="sha512-H6cPm97FAsgIKmlBA4s774vqoN24V5gSQL4yBTDOY2su2DeXZVhQPxFK4P6GPdnZqM9fg1G3cMv5wD7e6cFLZQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="/js/utils.js"></script>
     <script src="/js/classes.js"></script>
     <script src="index.js"></script>
